<resources>
    <string name="app_name">Swike</string>
    <string name="terms_and_services">By tapping Log In, you agree with our Terms of Service and PrivacyPolicy</string>
    <string name="sign_up_in_with_email">Sign Up in with Email</string>
    <string name="log_in_with_email">Log in with Email</string>
    <string name="fragment1Text">Discover new and interesting Images around the world</string>
    <string name="Fragment2Text">Swipe right to like someones Style or swipe left to pass</string>
    <string name="Fragment3Text">More you Swipe, More your Score increses</string>
    <string name="Fragment4Text">More your Score, More people will reach you</string>
    <string name="create_new_account">Create new account</string>
    <string name="email_address">abcd1234@example.com</string>
    <string name="term">By Signing up you agree with our terms and conditions</string>
    <string name="sign_up">Sign up</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="username">Username</string>
    <string name="crop">Crop</string>
    <string name="add_photo">Add Photo</string>
    <string name="likes">Likes</string>
    <string name="value">value</string>
    <string name="dislikes">DisLikes</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="settings">Settings</string>
    <string name="values">Value</string>
    <string name="field">Field</string>
    <string name="heading">Heading</string>
    <string name="ok">OK</string>
    <string name="chng_name">Change Name</string>
    <string name="string">This is how you appear on Blow It, So pick a name your friend know you by</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="create_acc">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="verify">Verify</string>
    <string name="verify_now">Verify Now</string>
    <string name="already_verified">Already Verified</string>
    <string name="gender">Gender</string>
    <string name="no_post">No Post Uploaded</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="support">Support</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy">Privacy</string>
    <string name="liked_by">Liked By</string>
    <string name="num">num</string>
    <string name="rejected_by">Rejected By</string>
    <string name="terms">By logging in ,you agree to our Terms and Conditions.</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="password_string">To set a new password, please enter your current password first</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_score_more_reaches">More Score, More Reaches</string>
    <string name="more_your_scorewill_more_people_will_be_able_to_reach_you">More your Scorewill, More people will be able to reach you.</string>
    <string name="have_a_powerfull_bio">Have a powerfull Bio</string>
    <string name="tell_us_about_your_hobby_style_etc">Tell us about your hobby,style,etc.</string>
    <string name="style_around_the_world">Style around the world</string>
    <string name="passport_to_anywhere_in_the_world">Passport to anywhere in the World.</string>
    <string name="we_provide_you_average_score_of_your_styles">We provide you average score of your Styles.</string>
    <string name="get_your_style_score">Get your Style Score</string>
    <string name="log_out">Log Out</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="no_post_available_right_new">No Post Available Right now</string>
    <string name="home">Home</string>

</resources>
