<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:id="@+id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:layout_centerVertical="true"
                android:id="@+id/back"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="#999999"
                android:id="@+id/toolbarText"
                android:textSize="18sp"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/credentials"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="150dp"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:textColor="#31bcbcbc"
                app:met_floatingLabel="highlight"
                app:met_underlineColor="#999999"
                app:met_floatingLabelTextColor="#999999"
                android:hint="@string/email"
                android:singleLine="true"
                android:layout_margin="10dp"
                android:inputType="textWebEmailAddress" />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                app:met_clearButton="true"
                app:met_autoValidate="true"
                app:met_floatingLabelAnimating="true"
                android:textColor="#31bcbcbc"
                app:met_floatingLabel="highlight"
                app:met_underlineColor="#999999"
                app:met_floatingLabelTextColor="#999999"
                android:singleLine="true"
                android:layout_margin="10dp"
                android:hint="@string/password" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:textColor="#999999"/>
        </LinearLayout>
        <Button
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/splash_screenbutton"
            android:padding="20dp"
            android:text="@string/log_in_with_email"
            android:textColor="#8d969393" />
</RelativeLayout>