<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:id="@+id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:id="@+id/back"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackgroundBorderless"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:id="@+id/toolbarText"
                android:textColor="#999999"
                android:text="@string/sign_up"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:orientation="vertical">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:layout_margin="10dp"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAnimating="true"
            app:met_textColorHint="#999999"
            app:met_floatingLabelTextColor="#31bcbcbc"
            android:textColor="#31bcbcbc"
            android:inputType="textPersonName"
            android:hint="@string/name" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:textColor="#31bcbcbc"
            app:met_floatingLabel="highlight"
            app:met_underlineColor="#999999"
            app:met_floatingLabelTextColor="#31bcbcbc"
            android:hint="@string/email"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_margin="10dp"
            android:textColor="#31bcbcbc"
            app:met_floatingLabelTextColor="#31bcbcbc"
            app:met_underlineColor="#999999"
            app:met_floatingLabel="highlight"
            android:hint="@string/username"
            android:inputType="textPersonName" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_margin="10dp"
            android:textColor="#31bcbcbc"
            app:met_underlineColor="#999999"
            app:met_floatingLabelTextColor="#31bcbcbc"
            app:met_floatingLabel="highlight"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/SignUp"
        android:background="@drawable/splash_screensignup_button"
        android:text="@string/sign_up"
        android:padding="20dp"
        android:textColor="#ffffff"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>
</LinearLayout>