<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3f000000"
    tools:context=".ChangeValues">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="20dp"
        android:id="@+id/cardView"
        android:layout_margin="20dp"
        android:elevation="2dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:id="@+id/longString"
                android:layout_below="@+id/value"
                android:text="@string/string"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:fontFamily="sans-serif"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:id="@+id/value"
                android:text="@string/value"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTxt"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/longString"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:singleLine="true"
                android:inputType="text"
                tools:ignore="LabelFor" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/save"
                android:background="@drawable/splash_screensignup_button"
                android:id="@+id/saveBtn"
                android:layout_marginBottom="18dp"
                android:layout_below="@+id/editTxt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/saveBtn"
                android:textAlignment="center"
                android:fontFamily="Lato"
                android:textColor="#bb969393"
                android:textSize="18sp"
                android:id="@+id/cancel"
                android:layout_marginBottom="20dp"
                android:text="@string/cancel"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>