<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/InDirectLoginRelative"
        android:visibility="visible">
        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/termsService"
            android:layout_marginTop="20dp"
            android:id="@+id/ViewPager">

        </android.support.v4.view.ViewPager>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/SignUp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textAlignment="center"
            android:textSize="12sp"
            android:id="@+id/termsService"
            android:textColor="#bb969393"
            android:text="@string/terms_and_services"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:id="@+id/SignUp"
            android:layout_above="@+id/Login"
            android:background="@drawable/splash_screensignup_button"
            android:text="@string/sign_up_in_with_email"
            android:padding="20dp"
            android:textColor="#ffffff"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:id="@+id/Login"
            android:background="@drawable/splash_screenbutton"
            android:text="@string/log_in_with_email"
            android:padding="20dp"
            android:textColor="#bb969393"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:id="@+id/DirectLoginRelative">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@null"
            android:layout_centerInParent="true"
            android:src="@drawable/icon"
            android:id="@+id/DirectLogin"/>
    </RelativeLayout>
</RelativeLayout>