<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".SettingsActivity">
    <android.support.v7.widget.Toolbar
        android:layout_height="?android:attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:id="@+id/actionBar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:id="@+id/backk"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_arrow_back_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_marginStart="55dp"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@android:color/black" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionBar"
        android:listSelector="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:clickable="false"
        android:layout_above="@+id/allhanger"
        android:id="@+id/listView"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/allhanger"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/loggedInas"
            android:text="@string/logged_in_as"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/userID"
            android:layout_marginTop="2dp"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_out"
            android:text="@string/log_out"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:background="#6DD5FA"
            android:textColor="@android:color/white"
            android:paddingTop="15dp"
            android:textSize="18sp"
            android:paddingBottom="15dp"/>
    </LinearLayout>
</RelativeLayout>