<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPassword">
    <android.support.v7.widget.Toolbar
        android:layout_height="?android:attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:elevation="2dp"
        android:id="@+id/actionBar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:id="@+id/back"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_back_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:layout_marginStart="55dp"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@android:color/black" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_string"
        android:layout_above="@+id/oldpassword"
        android:textAlignment="center"
        android:id="@+id/passwordString"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:textColor="#bb969393"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:alpha="1"
        android:id="@+id/ForgotPassword"
        android:background="@drawable/splash_screenbutton"
        android:padding="15dp"
        android:textSize="25sp"
        android:textColor="#003A6F"
        android:text="@string/verify"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:orientation="vertical"
        android:id="@+id/NewPasswordHolder"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/NewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@android:color/black"
            app:met_floatingLabelTextSize="18sp"
            app:met_floatingLabelTextColor="#FF5959"
            app:met_underlineColor="@android:color/holo_blue_light"
            app:met_hideUnderline="false"
            android:hint="@string/new_password"
            app:met_floatingLabel="highlight"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/ConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="#FF5959"
            app:met_floatingLabelTextSize="18sp"
            app:met_hideUnderline="false"
            app:met_underlineColor="@android:color/holo_blue_light" />
    </LinearLayout>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/oldpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_marginStart="20dp"
        android:textColor="@android:color/black"
        android:visibility="visible"
        android:layout_marginEnd="20dp"
        app:met_floatingLabelTextSize="18sp"
        app:met_floatingLabelTextColor="#FF5959"
        app:met_underlineColor="@android:color/holo_blue_light"
        app:met_hideUnderline="false"
        android:hint="@string/old_password"
        app:met_floatingLabel="highlight"/>
</RelativeLayout>